--- a/Designa/Views/Raiz/Index.cshtml
+++ b/Designa/Views/Raiz/Index.cshtml
@@ -67,6 +67,9 @@
                 @Html.DisplayFor(modelItem => Model.Specialty)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => Model.Specialty)
+            </td>
+            <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
