--- a/Designa/Views/Shared/_Layout.cshtml
+++ b/Designa/Views/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
                 <div class='collapse navbar-collapse justify-content-end' id='navbarSupportedContent'>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Publicacao" asp-action="Index">Publicações</a>
+                            <a class="nav-link" asp-area="" asp-controller="Publicacao" asp-action="Index">Publicações</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Reuniao" asp-action="Index">Reuniões</a>
                         </li>
                     </ul>
                     <ul class='navbar-nav ml-auto'>
