--- a/Designa/Views/Reuniao/Index.cshtml
+++ b/Designa/Views/Reuniao/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Reuniões";
-    int cont = 1;
+    int cont = 0;
 }
 
 <h1>Reuniões</h1>
@@ -21,25 +21,46 @@
                     </div>
                     <div class="card-body">
                         @{
-                            cont = 1;
+                            cont = 0; // Reseta o contador
                         }
                         @foreach (var parte in item.Partes)
                         {
-                            <h4 class="@(cont <= 2 ? "txt-color-teal" : cont <= 3  ? "txt-color-gold" : "txt-color-maroon")">
-                                @(parte.Numero != 0 ? $"{parte.Numero}." : "")
-                                @Html.DisplayFor(modelitem => parte.Titulo)
-                                @(parte.Numero != 0 ? $"({parte.Minutos} min)" : "")
-                            </h4>
-                            <div class="row">
-                                <div class="col-6">
-                                    <input type="text" class="form-control" id="txtPublicador" placeholder="Nome publicador">
-                                </div>
-                                <div class="col-6">
-                                    <input type="text" class="form-control" id="txtAjudante" placeholder="Nome ajudante">
-                                </div>
-                            </div>
                             if (parte.Numero == 0)
                                 cont++;
+                            <div class="row">
+                                <div class="col-12">
+                                    @if (parte.Numero == 0 && cont == 1)
+                                    {
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-gem icone-gema float-sm-start me-3 mb-2" viewBox="0 0 16 16">
+                                            <path d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6zm11.386 3.785-1.806-2.41-.776 2.413zm-3.633.004.961-2.989H4.186l.963 2.995zM5.47 5.495 8 13.366l2.532-7.876zm-1.371-.999-.78-2.422-1.818 2.425zM1.499 5.5l5.113 6.817-2.192-6.82zm7.889 6.817 5.123-6.83-2.928.002z" />
+                                        </svg>
+                                    }
+                                    else if (parte.Numero == 0 && cont == 2)
+                                    {
+                                        <div class="icon-cevada float-sm-start me-3 mb-2"></div>
+                                    }
+                                    else if (parte.Numero == 0 && cont == 3)
+                                    {
+                                        <div class="icon-ovelha float-sm-start me-3 mb-2"></div>
+                                    }
+                                    <h4 class="@(cont == 1 ? "txt-color-teal" : cont == 2  ? "txt-color-gold" : "txt-color-maroon")">
+                                        @(parte.Numero != 0 ? $"{parte.Numero}." : "") 
+                                        @parte.Titulo
+                                        @(parte.Numero != 0 ? $"({parte.Minutos} min)" : "")
+                                    </h4>
+                                </div>
+                            </div>
+                            if (parte.Numero != 0)
+                            {
+                                <div class="row mb-2">
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" id="txtPublicador" autocomplete="off" placeholder="Nome publicador">
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" id="txtAjudante" autocomplete="off" placeholder="Nome ajudante">
+                                    </div>
+                                </div>
+                            }
                         }
                     </div>
                 </div>
