--- a/Designa/Views/Shared/_Layout.cshtml
+++ b/Designa/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Reuniao" asp-action="Index">Reuniões</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Irmaos" asp-action="Index">Irmãos</a>
+                        </li>
                     </ul>
                     <ul class='navbar-nav ml-auto'>
                         <li class='nav-item dropdown'>
@@ -70,6 +73,6 @@
     <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    
+
 </body>
 </html>
