Correções nos modelos e criação de Repository generico para facilitar o crud e manutenção do código.

--- a/Designa/Views/Shared/_Layout.cshtml
+++ b/Designa/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Reuniao" asp-action="Index">Reuniões</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Irmaos" asp-action="Index">Irmãos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Publicador" asp-action="Index">Publicadores</a>
                         </li>
                     </ul>
                     <ul class='navbar-nav ml-auto'>
