--- a/Designa/Views/Publicador/_Edit.cshtml
+++ b/Designa/Views/Publicador/_Edit.cshtml
@@ -20,6 +20,11 @@
             <span asp-validation-for="Status" class="text-danger"></span>
         </div>
         <div class="col-lg-2 col-sm-3 mb-2">
+            <label asp-for="Privilegio" class="control-label"></label>
+            <select asp-for="Privilegio" class="form-select" asp-items="@Html.GetEnumSelectList<Privilegio>()"></select>
+            <span asp-validation-for="Privilegio" class="text-danger"></span>
+        </div>
+        <div class="col-lg-2 col-sm-3 mb-2">
             <label asp-for="Sexo" class="control-label"></label>
             <select asp-for="Sexo" class="form-select">
                 <option value="M">Masculino</option>
@@ -32,14 +37,14 @@
             <select asp-for="EMenorIdade" class="form-select" asp-items="@Html.GetEnumSelectList<EnumBoleano>()"></select>
             <span asp-validation-for="EMenorIdade" class="text-danger"></span>
         </div>
-        <div class="col-lg-5 col-sm-5 mb-2">
+        <div class="col-lg-4 col-sm-5 mb-2">
             <label asp-for="PaiId" class="control-label"></label>
             <select asp-for="PaiId" class="form-select" asp-items="@ViewBag.PaiId">
                 <option value="">Selecione...</option>
             </select>
             <span asp-validation-for="PaiId" class="text-danger"></span>
         </div>
-        <div class="col-lg-5 col-sm-5 mb-2">
+        <div class="col-lg-4 col-sm-5 mb-2">
             <label asp-for="MaeId" class="control-label"></label>
             <select asp-for="MaeId" class="form-select" asp-items="@ViewBag.MaeId">
                 <option value="">Selecione...</option>
